; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_ptrace.c_send_sigtrap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_ptrace.c_send_sigtrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.pt_regs = type { i32 }
%struct.siginfo = type { i32 }

@SIGTRAP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_sigtrap(%struct.task_struct* %0, %struct.pt_regs* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca %struct.pt_regs*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.siginfo, align 4
  store %struct.task_struct* %0, %struct.task_struct** %5, align 8
  store %struct.pt_regs* %1, %struct.pt_regs** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %11 = load %struct.pt_regs*, %struct.pt_regs** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @fill_sigtrap_info(%struct.task_struct* %10, %struct.pt_regs* %11, i32 %12, i32 %13, %struct.siginfo* %9)
  %15 = load i32, i32* @SIGTRAP, align 4
  %16 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %17 = call i32 @force_sig_info(i32 %15, %struct.siginfo* %9, %struct.task_struct* %16)
  ret void
}

declare dso_local i32 @fill_sigtrap_info(%struct.task_struct*, %struct.pt_regs*, i32, i32, %struct.siginfo*) #1

declare dso_local i32 @force_sig_info(i32, %struct.siginfo*, %struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
